<resources>
    <string name="app_name">trivia_login</string>

    <string name="activity_login_loading_msg">Please wait, Loading ...</string>

    <string name="activity_login_fail_msg">Login Failed !! Try again later.</string>

    <string name="activity_login_enter_email">Please enter EmailID.</string>

    <string name="activity_login_enter_password">Please enter Password.</string>

    <string name="activity_login_password_err">Password should be grater than 6 characters.</string>

    <string name="activity_login_email_invalid">EmailID is invalid.</string>

    <string name="activity_login_password_wrong">Password is wrong.</string>

    <string name="activity_login_alert_ok">OK</string>
    <string name="cache_status">Playing Online: Downloaded %d%%</string>
    <string name="connection_issue_msg">No internet connection.</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="changeLanguage">تغییر زبان</string>
    <string name="enterYourMobileNumber">شماره موبایل خود را وارد کنید</string>
    <string name="next">ادامه</string>
    <string name="messageWasSend">کد ارسال شده با شماره زیر را وارد نمایید</string>
    <string name="didntGetCode">کدی دریافت نکردم</string>
    <string name="forgetPassword">فراموشی رمز عبور</string>
    <string name="signup">ثبت نام</string>
    <string name="Login">ورود</string>
    <string name="questionTitle">صورت سوال</string>
    <string name="Tap_Next_to_verify_your_account_with_your_phone_number">برای تایید شماره موبایل شما یک پیامک حاوی کد برایتان ارسال میشود</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="default_input_hint">پیام خود را برای همگروهی ها بنویسید...</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home">Home</string>

    <string name="hard">سخت</string>
    <string name="medium">متوسط</string>
    <string name="easy">آسان</string>

    <string name="descriptive">تشریحی</string>
    <string name="short_answer">جواب کوتاه</string>
    <string name="multiple_choice">چند گزینه ای</string>

    <string name="event_details">اطلاعات رویداد</string>

    <string name="events">رویداد ها</string>
    <string name="messgaes">خبر ها</string>
    <string name="pofile">صفحه شخصی</string>


    <string name="sample_source">BBC News • 1h</string>
    <string name="sample_title">Why would Putin want to nuke Florida?</string>
    <string name="sample_title_long">PM Narendra Modi\'s frivolous statements won\'t help create wedge between me and Congress: Amarinder Singh</string>
    <string name="sample_description">The Sunshine State is home to Mr Trump\'s golf resort, but bigger targets lie elsewhere in the US.</string>
    <string name="image_desc">Image for the News Post</string>

    <string name="title_headlines">Headlines</string>
    <string name="title_saved">Saved</string>
    <string name="title_sources">Sources</string>

    <string name="image_desc_share_button">share button</string>
    <string name="image_desc_save_button">save button</string>
    <string name="image_desc_open_in_browser_button">open in browser button</string>
    <string name="image_btn_desc_next">Next Button</string>
    <string name="image_btn_desc_prev">Previous Button</string>
    <string name="bottom_sheet_option_save">Save for later</string>
    <string name="bottom_sheet_option_share">Share</string>
    <string name="bottom_sheet_option_open_in_browser">Open in browser</string>
    <string name="button_read_full_story">read full story</string>

    <string name="image_desc_source_image">Source Image</string>
    <string name="sample_category">General</string>

    <string name="message_item_saved">Article added to Saved</string>
    <string name="message_item_removed">Article removed from Saved</string>
    <string name="info_no_saved_articles">No Saved Articles</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="sample_page">1/5</string>
</resources>
