<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"

        android:background="@drawable/filter_toolbar"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bt_close"
                android:padding="15dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/cancel" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/name_toolbar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="فیلتر سوالات"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                 />

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:padding="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ok"

                />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:id="@+id/lyt_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xmedium"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    tools:layout_editor_absoluteX="0dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="سطح سوال" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tableRow4">

                    <co.ceryle.radiorealbutton.RadioRealButtonGroup
                        android:id="@+id/radioRealButtonGroup_1"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        app:rrbg_animateDrawables_enter="cycle"
                        app:rrbg_animateDrawables_enterDuration="100"
                        app:rrbg_animateDrawables_scale="2"
                        app:rrbg_animateTexts_enter="overshoot"
                        app:rrbg_animateTexts_enterDuration="500"
                        app:rrbg_backgroundColor="@color/radiobuttonback"
                        app:rrbg_bottomLineColor="@color/white"
                        app:rrbg_bottomLineRadius="2dp"
                        app:rrbg_bottomLineSize="0dp"

                        app:rrbg_checkedPosition="0"
                        app:rrbg_dividerRadius="10dp"
                        app:rrbg_radius="2dp"
                        app:rrbg_selectorAboveOfBottomLine="false"
                        app:rrbg_selectorAnimationType="translate_y"
                        app:rrbg_selectorColor="#50B784"
                        app:rrbg_selectorDividerColor="@color/white"
                        app:rrbg_selectorDividerRadius="10dp"
                        app:rrbg_selectorDividerSize="10dp"
                        app:rrbg_selectorFullSize="true"
                        app:rrbg_selectorRadius="10dp"
                        app:rrbg_selectorSize="60dp">

                        <co.ceryle.radiorealbutton.RadioRealButton
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            app:rrb_selectorColor="#DD3F3F"
                            app:rrb_text="@string/hard"

                            app:rrb_textColor="@color/white"
                            app:rrb_textSize="13dp"
                            app:rrb_textTypefacePath="font/iran_sans.ttf" />

                        <co.ceryle.radiorealbutton.RadioRealButton
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layoutDirection="ltr"

                            app:rrb_selectorColor="#E0D402"
                            app:rrb_text="@string/medium"
                            app:rrb_textColor="@color/white"
                            app:rrb_textSize="13dp"
                            app:rrb_textTypefacePath="font/iran_sans.ttf" />

                        <co.ceryle.radiorealbutton.RadioRealButton
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            app:rrb_text="@string/easy"
                            app:rrb_textColor="@color/white"

                            app:rrb_textSize="13dp"
                            app:rrb_textTypefacePath="font/iran_sans.ttf"
                            app:rrbg_selectorColor="#50B784"

                            />
                    </co.ceryle.radiorealbutton.RadioRealButtonGroup>


                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:gravity="right"
                    app:layout_constraintTop_toBottomOf="@+id/tableRow"
                    tools:layout_editor_absoluteX="16dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="نوع سوال" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tableRow5"
                    tools:layout_editor_absoluteX="0dp">

                    <co.ceryle.radiorealbutton.RadioRealButtonGroup
                        android:id="@+id/radioRealButtonGroup_2"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        app:rrbg_animateDrawables_enter="cycle"
                        app:rrbg_animateDrawables_enterDuration="100"
                        app:rrbg_animateDrawables_scale="2"
                        app:rrbg_animateTexts_enter="overshoot"
                        app:rrbg_animateTexts_enterDuration="500"
                        app:rrbg_backgroundColor="@color/radiobuttonback"
                        app:rrbg_bottomLineColor="@color/white"
                        app:rrbg_bottomLineRadius="2dp"
                        app:rrbg_bottomLineSize="0dp"

                        app:rrbg_checkedPosition="0"
                        app:rrbg_dividerRadius="10dp"
                        app:rrbg_radius="2dp"
                        app:rrbg_selectorAboveOfBottomLine="false"
                        app:rrbg_selectorAnimationType="translate_y"
                        app:rrbg_selectorColor="#50B784"
                        app:rrbg_selectorDividerColor="@color/white"
                        app:rrbg_selectorDividerRadius="10dp"
                        app:rrbg_selectorDividerSize="10dp"
                        app:rrbg_selectorFullSize="true"
                        app:rrbg_selectorRadius="10dp"
                        app:rrbg_selectorSize="60dp">

                        <co.ceryle.radiorealbutton.RadioRealButton
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:background="@drawable/button_red_background"
                            app:rrb_selectorColor="#DD3F3F"
                            app:rrb_text="@string/descriptive"
                            app:rrb_textColor="@color/white"
                            app:rrb_textSize="13dp"
                            app:rrb_textTypefacePath="font/iran_sans.ttf" />

                        <co.ceryle.radiorealbutton.RadioRealButton
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layoutDirection="ltr"

                            app:rrb_selectorColor="#E0D402"
                            app:rrb_text="@string/short_answer"
                            app:rrb_textColor="@color/white"
                            app:rrb_textSize="13dp"
                            app:rrb_textTypefacePath="font/iran_sans.ttf" />

                        <co.ceryle.radiorealbutton.RadioRealButton
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            app:rrb_text="@string/multiple_choice"
                            app:rrb_textColor="@color/white"

                            app:rrb_textSize="13dp"
                            app:rrb_textTypefacePath="font/iran_sans.ttf"
                            app:rrbg_selectorColor="#50B784"

                            />
                    </co.ceryle.radiorealbutton.RadioRealButtonGroup>
                </TableRow>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="horizontal">

                <View
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="0dp" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />



            </LinearLayout>


            <View
                android:id="@+id/lyt_spacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>